fixed the upload not showing uploaded files

--- a/apartment/leafii/stylesheet/webform/webform.css
+++ b/apartment/leafii/stylesheet/webform/webform.css
@@ -11,7 +11,7 @@
     width: 200px;
     height: 65px;
     text-align: center;
-    padding-top: 25px;
+    padding: 25px;
     margin: 10px;
 }
 .dragover {
